# axon

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: backend.rs  pipeline.rs  pool.rs
deploy/: prometheus.yml
examples/: client.py  client.rs  config.toml  streaming_client.py  streaming_client.rs
fuzz/: Cargo.toml
fuzz/corpus/config_parsing/: 01_valid_minimal.toml  02_full_pipeline.toml  03_invalid_backend.toml
fuzz/fuzz_targets/: config_parsing.rs  pipeline_construction.rs  tensor_shapes.rs
proto/axon/inference/v1/: inference.proto
scripts/: seed_demo.py
src/: backend.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  predictions.rs  registry.rs  server.rs  store.rs  stream.rs  types.rs
src/backend/: mod.rs  onnx.rs  packaging.rs
src/backend/packaging/: mod.rs
src/config/: mod.rs
src/pipeline/: build.rs  pool.rs  stages.rs
src/pipeline/stages/: clip.rs  impute.rs  infer.rs  mod.rs  normalize.rs  postprocess.rs  validate.rs
src/registry/: mlflow.rs  mod.rs
src/server/: mod.rs
src/store/: redis.rs
src/stream/: mod.rs
tests/: onnx_integration.rs
tests/fixtures/: feature_schema.toml
