[package]
name = "axon"
version = "0.1.0"
edition = "2024"
description = "High-performance ML inference serving engine, part of the Cortex platform"

[profile.release]
opt-level = 3
lto = "fat"         # full cross-crate LTO — lets LLVM inline across ndarray, pipex, and axon
codegen-units = 1
panic = "abort"     # removes stack unwinding machinery — smaller binary, no unwind overhead

[dependencies]

# --- pipeline ---
pipex   = { path = "../pipex" }
ndarray = "0.17"

# --- inference backend ---
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }

# --- fixed-capacity stack types ---
# ArrayString<N> replaces String for hot-path fields where max length is known,
# eliminating heap allocation and reallocation risk entirely.
arrayvec = "0.7"

# --- async runtime ---
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# --- async trait support ---
async-trait = "0.1"

# --- http client ---
reqwest = { version = "0.12", features = ["json"] }

# --- serialisation ---
serde = { version = "1", features = ["derive"] }
toml  = "0.8"

# --- error handling ---
anyhow    = "1"
thiserror = "2"

# --- logging ---
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
