[package]
name = "axon"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A configurable real-time ML inference engine, part of the Cortex platform"
repository = "https://github.com/Ankithboggaram/axon"
homepage    = "https://github.com/Ankithboggaram/axon"
keywords    = ["inference", "onnx", "grpc", "machine-learning", "pipeline"]
categories  = ["science"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = "fat"         # full cross-crate LTO, lets LLVM inline across ndarray, pipex, and axon
codegen-units = 1
panic = "abort"     # removes stack unwinding machinery; smaller binary, no unwind overhead

[dependencies]

# --- pipeline ---
pipex = { git = "https://github.com/Ankithboggaram/pipex.git", tag = "v0.2.0" }
ndarray = "0.17"

# --- inference backend ---
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }

# --- fixed-capacity stack types ---
# ArrayString<N> replaces String for hot-path fields where max length is known,
# eliminating heap allocation and reallocation risk entirely.
arrayvec = "0.7"

# --- sync primitives ---
parking_lot = "0.12"

# --- async runtime ---
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"

# --- grpc ---
tonic        = "0.12"
tonic-health = "0.12"
prost        = "0.13"
async-stream = "0.3"
tower        = { version = "0.4", features = ["timeout"] }

# --- async trait support ---
async-trait = "0.1"

# --- http client ---
reqwest      = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# --- feature store ---
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }
rmp-serde      = "1"

# --- serialisation ---
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml  = "0.0.12"
toml       = "0.8"

# --- metrics ---
prometheus = "0.13"

# --- error handling ---
anyhow    = "1"
thiserror = "2"

# --- cli ---
clap = { version = "4", features = ["derive"] }

# --- logging ---
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.12"
